# rust-messaging

./: .gitignore  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  rust.yml
client/: Cargo.toml
client/src/: main.rs
exec/release/: client.d  server  server.d
exec/release/.fingerprint/client-12a4b4269ca42fcf/: bin-client  bin-client.json
exec/release/.fingerprint/server-b145b528cc09873e/: bin-server  bin-server.json
server/: Cargo.toml
server/src/: main.rs
